apps/paperless-ngx/base/gotenberg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
  namespace: paperless-ngx
spec:
  selector:
    app: gotenberg
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
