apps/paperless-ngx/base/tika-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tika
  namespace: paperless-ngx
spec:
  selector:
    app: tika
  ports:
  - port: 9998
    targetPort: 9998
    protocol: TCP
