apps/paperless-ngx/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: traefik
      sectionName: https
  hostnames:
    - paperless.homelab.lastsector.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless-ngx
          port: 8000
