apps/paperless-ngx/base/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: paperless-ngx
      port:
        number: 8000
  tls:
  - hosts:
    - paperless
